@@ -5,9 +5,9 @@ Author: Greg Snow
 Description: This package is a set of demonstration functions that can be used in a classroom to demonstrate statistical concepts, or on your own to better understand the concepts or the programming.
 Maintainer: Greg Snow <greg.snow@imail.org>
 License: Artistic-2.0
-Date: 2011-12-03
-Suggests: tkrplot, lattice, MASS, rgl, sgeostat, mapproj, tcltk, tcltk2, R2wd, EBImage, png
-Enhances: maptools, qcc
+Date: 2012-01-01
+Suggests: tkrplot, lattice, MASS, rgl, sgeostat, mapproj, tcltk, tcltk2, R2wd, EBImage, png, ggplot2, logspline
+Enhances: qcc
 LazyData: true
 KeepSource: true
 
