@@ -16,6 +16,12 @@ New in TeachingDemos version 2.8
 * cnvert.coords is now depricated, use grconvertX and grconvertY from
   the graphics package instead.
 
+* Functions identify.Map, identify.polylist, recenter.Map, and
+  project.Map have been removed as there is now better functionality
+  in the sp package.
+
+* The state.vbm object has been moved to the maptools package.
+
 New in TeachingDemos version 2.7
 
 * new function ms.image for plotting images using my.symbols.
